--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
-        "symfony/process": "~2.6",
+        "symfony/process": "~2.6"
+    },
+    "require-dev": {
         "phpunit/phpunit": "~4.6"
     },
     "autoload":{
