--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         }
     ],
     "require": {
-        "symfony/process": "~2.6,~3.0"
+        "symfony/process": "~2.6 ~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6"
